docs: revamp README to emphasize high-quality projects & professional UI